add markup and style for the header

--- a/source/_variables.scss
+++ b/source/_variables.scss
@@ -12,7 +12,8 @@ $GrayishBlue: hsl(233, 8%, 62%);
 $LightGrayishBlue: hsl(220, 16%, 96%);
 $eryLightGray: hsl(0, 0%, 98%);
 $White: hsl(0, 0%, 100%);
+$red: hsl(0, 44%, 53%);
 
 /** fonts sizes**/
-$font-sm:0.875rem;
-$font-md:1.125rem;
+$font-sm:0.875rem; // 14px
+$font-md:1.125rem;// 18px
