--- a/source/_mixin.scss
+++ b/source/_mixin.scss
@@ -1,11 +1,11 @@
 @mixin reset {
-    *{
+    *,*::before ,*::after{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-
-        
+       
     }
+    
     li{
         list-style-type: none;
     }
