--- a/source/_helper.scss
+++ b/source/_helper.scss
@@ -13,3 +13,16 @@
          align-items: center;
     }
 }
+
+// Visibility
+.hide-for-mobile {
+    @include breakpoint-down(medium){
+      display: none;
+    }
+  }
+  
+  .hide-for-desktop {
+    @include breakpoint-up(large){
+      display: none;
+    }
+  }
