--- a/source/_header.scss
+++ b/source/_header.scss
@@ -8,8 +8,9 @@
    
       }
       &__menu{
-      
+     
         > span{
+            transition: all 300ms ease-in-out;
             display: block;
             width: 26px;
             height: 2px;
@@ -17,8 +18,30 @@
             &:not(:last-child){
                 margin-bottom: 3px;
             }
+           
         }
+     
+       
+      
+    
+      
+      
+      
       }
+      & .open{
+            
+        span:nth-child(1){
+
+        transform: translate(1px,4px) rotate(40deg) ;
+       } 
+      span:nth-child(2){
+         opacity: 0;}
+       span:nth-child(3){
+           transform: translate(1px, -5px) rotate(-40deg) ;
+          
+          
+       }
+}
       &__links {
 
         a {
