--- a/source/_header.scss
+++ b/source/_header.scss
@@ -85,3 +85,17 @@
         }
     }
 }
+.overlay {
+  transition: all 0.4s ease-in-out;
+  z-index: -2;
+  opacity: 0;
+  position: fixed;
+  top: 110px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-image: linear-gradient($DarkBlue, transparent);
+}
+.overlay-open{
+  opacity: 1;
+}
