--- a/source/_helper.scss
+++ b/source/_helper.scss
@@ -12,6 +12,9 @@
     &-ai-c{
          align-items: center;
     }
+    &-jc-sa{
+      justify-content: space-around;
+ }
 }
 
 // Visibility
@@ -26,3 +29,18 @@
       display: none;
     }
   }
+
+
+  //visibility
+  .hasfade{
+    visibility: hidden;
+  }
+  //paddings
+
+  .container{
+    padding-left:  1.5rem;
+    padding-right:  1.5rem;
+  }
+  .noscroll{
+    overflow: hidden;
+}
