--- a/source/_variables.scss
+++ b/source/_variables.scss
@@ -10,10 +10,12 @@ $BrightCyan: hsl(192, 70%, 51%);
 
 $GrayishBlue: hsl(233, 8%, 62%);
 $LightGrayishBlue: hsl(220, 16%, 96%);
-$eryLightGray: hsl(0, 0%, 98%);
+$VeryLightGray: hsl(0, 0%, 98%);
 $White: hsl(0, 0%, 100%);
 $red: hsl(0, 44%, 53%);
 
 /** fonts sizes**/
 $font-sm:0.875rem; // 14px
 $font-md:1.125rem;// 18px
+$font-lg:1.25rem;//
+$font-xlg:2.25rem;//
