add the features section

--- a/source/_hero.scss
+++ b/source/_hero.scss
@@ -6,7 +6,7 @@
     
 }
 .hero{
-
+ 
     @include breakpoint-up(large){
         display: flex;
         align-items: center;
@@ -38,10 +38,10 @@
              position: absolute;
              left: 0;
              right: 0;
-             background-image: url('/images/image-mockups.png');
+             background-image: url('/images/file.png');
              background-repeat: no-repeat;
-             background-position: center bottom;
-             background-size: 93%;
+             background-position: center center;
+             background-size: 100%;
              width: 100%;
              height:100%;
          
@@ -50,13 +50,16 @@
 
     }
     &__text{
+        padding-bottom: 40px;
+
         @include breakpoint-up(large){
             flex: 2;
             order: 1;
             text-align: left;
-            
-
+          
         }
+      
+
         padding-top: 20px;
         h1{
             color: $DarkBlue;
