--- a/source/_global.scss
+++ b/source/_global.scss
@@ -18,6 +18,34 @@ body{
    
 }
 
+//h1,h2,h3
+h1,h2,h3{
+    font-weight: 300;
+    line-height: 1.15;
+    color:$DarkBlue;
+    margin-top: 0px;
+}
+h1{  
+    font-size: 2.21rem;
+    margin-bottom: 1.5rem;
+    @include breakpoint-up(large){
+        font-size: $font-xlg;
+    }
+}
+h2{
+    font-size: 1.875rem;
+    margin-bottom: 1.562rem;
+    @include breakpoint-up(large){
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+    }
+}
+ p{
+     line-height: 1.5rem;
+     margin-bottom: 2.25rem;
+ }
+
+
 
 //button
 
