add footer and make it responsive using grid

--- a/source/_global.scss
+++ b/source/_global.scss
@@ -51,7 +51,7 @@ h2{
 
 button ,.button{
     padding: 0.875rem 2.875rem ;
-   background: linear-gradient(to right, #6dd5ed, #2193b0); 
+   background: linear-gradient(to right, #ed7166, #9b1f13); 
     border:0;
     color: $White;
     font-weight: 400;
